--- a/CHW3/DGM_HW3_Normalizing Flow_Practical.ipynb
+++ b/CHW3/DGM_HW3_Normalizing Flow_Practical.ipynb
@@ -50,8 +50,8 @@
       },
       "outputs": [],
       "source": [
-        "name = \"\"\n",
-        "studentId = \"\""
+        "name = \"AmirHossein Naghdi\"\n",
+        "studentId = \"400102169\""
       ]
     },
     {
