--- a/CHW4/DGM_HW4_Practical_1.ipynb
+++ b/CHW4/DGM_HW4_Practical_1.ipynb
@@ -109,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ibCHvW_xFxAY",
-        "outputId": "52f15bd3-6fb4-4a27-e1f8-03cb86739a6e"
+        "outputId": "c2afa81a-db3f-4fce-9c72-4e907a29d56c"
       },
       "outputs": [
         {
@@ -236,8 +236,7 @@
         "test_set = MNIST(root='./', train=False, transform=transform, download=True)\n",
         "\n",
         "train_loader = DataLoader(train_set, batch_size=BATCH_SIZE, shuffle=True,  drop_last=True, pin_memory=True)\n",
-        "test_loader  = DataLoader(test_set,  batch_size=BATCH_SIZE, shuffle=False, drop_last=False)\n",
-        ""
+        "test_loader  = DataLoader(test_set,  batch_size=BATCH_SIZE, shuffle=False, drop_last=False)\n"
       ]
     },
     {
@@ -656,7 +655,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p2TpMlFaxJYS",
-        "outputId": "cc74d843-d46f-4f9b-de58-be24c1389e39"
+        "outputId": "7d6746ae-bd98-4e38-c92f-e4c9d3559d09"
       },
       "outputs": [
         {
@@ -666,8 +665,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 1: Train Loss = (-0.0008901756469774481, -0.0009954957061138088, 0.0010532005520291743)\n",
-            "Epoch 2: Train Loss = (-6.901135250155931e-05, -7.840209409968258e-05, 9.390741357888539e-05)\n"
+            "Epoch 1: Train Loss = (-0.0009895012170337467, -0.0010154986055164073, 0.000259973886574253)\n",
+            "Epoch 2: Train Loss = (-2.3348821038587284e-05, -3.0398695741041106e-05, 7.049875031017277e-05)\n"
           ]
         }
       ],
@@ -754,12 +753,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "K1J3M5UnbeAL"
       },
       "outputs": [],
       "source": [
+        "import numpy as np\n",
+        "from scipy.spatial import cKDTree\n",
         "\n",
         "def compute_identifiability(orig_data, synth_data):\n",
         "    \"\"\"\n",
@@ -770,7 +771,6 @@
         "    Returns:\n",
         "        identifiability_value: Identifiability value\n",
         "    \"\"\"\n",
-        "\n",
         "    def compute_entropy(labels):\n",
         "        \"\"\"\n",
         "        Compute entropy of the given labels.\n",
@@ -781,55 +781,50 @@
         "        Returns:\n",
         "            entropy: computed entropy\n",
         "        \"\"\"\n",
-        "\n",
-        "        # TODO: Implement the entropy computation\n",
-        "        value, counts = np.unique(labels, return_counts=True)\n",
-        "        probs = counts / len(labels)\n",
-        "        entropy = -np.sum(probs * np.log(probs + 1e-16))\n",
+        "        values, counts = np.unique(labels, return_counts=True)\n",
+        "        probabilities = counts / counts.sum()\n",
+        "        entropy = -np.sum(probabilities * np.log2(probabilities + 1e-16))\n",
         "        return entropy\n",
         "\n",
         "    orig_data = np.asarray(orig_data)\n",
-        "    no, x_dim = np.shape(orig_data)\n",
-        "\n",
         "    synth_data = np.asarray(synth_data)\n",
+        "\n",
+        "    no, x_dim = np.shape(orig_data)\n",
         "\n",
         "    W = np.zeros([x_dim,])\n",
         "\n",
-        "    # TODO: Compute weights using entropy of each dimension\n",
+        "    # Compute weights using entropy of each dimension\n",
         "    for i in range(x_dim):\n",
         "        W[i] = compute_entropy(orig_data[:, i])\n",
         "\n",
         "    # Normalize original and synthetic data\n",
-        "    orig_data_hat = orig_data.copy()\n",
-        "    synth_data_hat = synth_data.copy()\n",
+        "    orig_data_hat = orig_data / (W + 1e-16)\n",
+        "    synth_data_hat = synth_data / (W + 1e-16)\n",
         "\n",
         "    eps = 1e-16  # Small epsilon to avoid division by zero.\n",
         "\n",
-        "    # TODO: Normalize data using the weights\n",
-        "    # Normalize original and synthetic data\n",
-        "    orig_data_hat = orig_data / (W + eps)\n",
-        "    synth_data_hat = synth_data / (W + eps)\n",
+        "    # Compute the distances to the two nearest neighbors for each data point in the original data\n",
+        "    orig_tree = cKDTree(orig_data_hat)\n",
+        "    d_orig, idx_orig = orig_tree.query(orig_data_hat, k=3)\n",
         "\n",
-        "    # TODO: Compute the distances to the two nearest neighbors for each data point in the original data.\n",
-        "    dist_orig = cdist(orig_data_hat, orig_data_hat)\n",
-        "    np.fill_diagonal(dist_orig, np.inf)\n",
-        "    nearest_dist_orig = np.sort(dist_orig, axis=1)[:, :2]\n",
+        "    # Compute the distances from each point in the original data to its nearest neighbor in the synthetic data\n",
+        "    synth_tree = cKDTree(synth_data_hat)\n",
+        "    d_synth, idx_synth = synth_tree.query(orig_data_hat, k=1)\n",
         "\n",
-        "    # TODO: Compute the distances from each point in the original data to its nearest neighbor in the synthetic data.\n",
-        "    dist_synth = cdist(orig_data_hat, synth_data_hat)\n",
-        "    nearest_dist_synth = np.min(dist_synth, axis=1)\n",
-        "\n",
-        "    # TODO: Compute the identifiability metric\n",
+        "    # Compute the identifiability metric\n",
         "    '''\n",
         "    Calculate the difference between the nearest synthetic neighbor distance and\n",
         "    the second nearest original neighbor distance for each data point and\n",
         "    count how many times this difference is negative.\n",
         "    Compute the identifiability value as the fraction of times this occurs.\n",
         "    '''\n",
-        "    identifiability_count = np.sum(nearest_dist_synth < nearest_dist_orig[:, 1])\n",
-        "    identifiability_value = identifiability_count / no\n",
+        "    second_nearest_orig_distances = d_orig[:, 2]\n",
+        "    nearest_synth_distances = d_synth\n",
         "\n",
-        "    return identifiability_value"
+        "    negative_differences = (nearest_synth_distances - second_nearest_orig_distances) < 0\n",
+        "    identifiability_value = np.mean(negative_differences)\n",
+        "\n",
+        "    return identifiability_value\n"
       ]
     },
     {
